[package]
name = "orredis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "orredis"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
redis = { version = "0.21.*", features = ["r2d2", "aio", "async-std-comp"] }
mobc = { version = "0.7.*", features = ["async-std"] }
async-std = "1.12.0"
futures = "0.3.*"
once_cell = "1.5"
pin-project-lite = "0.2"
r2d2 = "0.8.10"
chrono = "0.4"
