[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "orredis"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    'pydantic >= 1.10.2'
]

[project.optional-dependencies]
tests = [
    "maturin>=0.13,<0.14",
    'pytest',
    'pytest-benchmark',
    'redislite',
    'pytest-lazy-fixture'
]
