[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "orredis"
version = "0.1.7"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
authors = [
    {name="Martin Ahindura ", email = "team.sopherapps@gmail.com"}
]
description = "A fast pydantic-based ORM for redis supporting both sync and async interaction over redis pooled connections"
license_files.paths = ["LICENSE-MIT", "LICENSE-APACHE"]
keywords = ["redis", "pydantic", "orm"]
readme = "README.md"
dependencies = ["pydantic>=1.10,<1.11"]
[project.optional-dependencies]
test = [
    "pytest>=7.1.3",
    "pytest-benchmark>=3.4.1",
    "pytest-lazy-fixture>=0.6.3",
    "redislite>=6.2.805324",
    "pytest-asyncio>=0.19.0"
]

[project.urls]
homepage = "https://github.com/sopherapps/orredis"
documentation = "https://github.com/sopherapps/orredis"
repository = "https://github.com/sopherapps/orredis"
changelog = "https://github.com/sopherapps/orredis/blob/master/CHANGELOG.md"
